resources/wikia/ui_components/modal/css/modal_default.scss
@import "skins/shared/color";
@import "skins/oasis/css/core/responsive-variables";
@import "skins/shared/mixins/transition";
@import "skins/shared/mixins/blackout";
@import "skins/shared/mixins/box-sizing-border-box";
@import "skins/shared/mixins/box-shadow";
@import "skins/shared/mixins/flexbox";
@import "skins/shared/mixins/calc";
@import "skins/shared/mixins/image-replacement";

$close-image: '/resources/wikia/ui_components/modal/images/close-dark.svg';
$modal-secondary-color: darken( $color-page, 10% );

@if( $is-dark-wiki ) {
	$close-image: '/resources/wikia/ui_components/modal/images/close-light.svg';
	$modal-secondary-color: lighten( $color-page, 3% );
}

// modals dimensions
$modal-min-height: 200px;
$modal-max-height: 90%;
$small-modal-width: 400px;
$medium-modal-width: 700px;
$medium-modal-width-small-screen: 500px;
$header-footer-height: 45px;
$large-modal-margin: 50px;

.modal {
	@include box-shadow( 1px, 2px, 5px, rgba(0, 0, 0, .7) );
	@include flexbox();
	@include flex-direction(column);
	@include box-sizing-border-box;

	background-color: $color-page;
	border-radius: 2px;
	max-height: $modal-max-height;
	min-height: $modal-min-height;
	margin: 0;
	overflow: hidden;
	padding: 0;
	position: relative;

	> header,
	> footer {
		@include flex-grow(0);
		@include flex-shrink(0);
		background-color: $modal-secondary-color;
		height: $header-footer-height; // flex-basis is not supported on Safari 6 so fixed height is needed
		padding: 13px 20px 18px;
	}

	> header,
	> section,
	> footer {
		@include box-sizing-border-box;
	}

	> section {
		padding: 20px;
	}

	> header h3 {
		color: $color-text;
		font-size: 17px;
		font-weight: bold;
		margin: 0;
		overflow: hidden;
		padding: 0 20px 0 0;
		text-overflow: ellipsis;
		white-space: nowrap;
		word-wrap: normal;
	}

	> header .close {
		@include image-replacement();
		background: url( $close-image );
		background-size: 20px 20px;
		display: block;
		float: right;
		height: 20px;
		outline: none;
		width: 20px;
	}

	> footer .button {
		float: right;
		margin-left: 20px;
	}

	> section {
		@include flex-grow(1);
		overflow: auto;
	}

	// IE flex-box fallback
	&.IE-flex-fix {
		display: block;
	}

	&.small {
		width: $small-modal-width;
	}

	&.medium {
		width: $medium-modal-width;
	}

	&.small,
	&.medium {
		> section {
			overflow: hidden;
			overflow-y: auto;
		}
	}

	&.large {
		@include height-calc('100% - #{$large-modal-margin}');
		@include width-calc('100% - #{$large-modal-margin}');
		display: block;
		max-height: none;
		min-height: none;
		padding-bottom: $header-footer-height;
		position: relative;

		> section {
			@include height-calc('100% - #{$header-footer-height}');
		}

		> footer {
			bottom: 0;
			left: 0;
			position: absolute;
			right: 0;
		}
	}

	.buttons {
		bottom: 15px;
	}
}

.modal-blackout {
	@include align-items(center);
	@include blackout();
	@include flexbox();
	@include justify-content(center);
	@include transition-shorthand( display 0.2s ease-in-out );
}

.IE-flex-fix {
	display: block;

	.modal {
		display: block;
		max-height: 90%;
		padding-bottom: $header-footer-height;

		> footer {
			bottom: 0;
			position: absolute;
			width: 100%;
		}

		> section {
			box-sizing: content-box;
		}

	}

	> .small,
	> .medium {
		left: 50%;
		position: fixed;
		top: 5%;
	}

	> .small {
		margin-left: -$small-modal-width / 2;
	}

	> .medium {
		margin-left: -$medium-modal-width / 2;
	}

	> .large {
		left: 25px;
		top: 25px;
	}

}

@media screen and (max-width: $breakpoint-min) {

	.modal.medium {
		width: $medium-modal-width-small-screen;
	}

	.modal-blackout {

		&.IE-flex-fix {

			> .medium {
				margin-left: -$medium-modal-width-small-screen / 2;
			}
		}
	}
}

// styles required to disable scrolling behind modal
body.with-blackout {

	&.background-dynamic {
		position: static;

		&:after,
		&:before {
			height: 100%;
		}
	}

	.WikiaSiteWrapper {
		position: fixed;
		width: 100%;
	}

	.fake-scrollbar {
		overflow-y: scroll;
	}
}

