CON-1812 fix global nav covering modal close button

--- a/resources/wikia/ui_components/modal/css/modal_default.scss
+++ b/resources/wikia/ui_components/modal/css/modal_default.scss
@@ -218,6 +218,10 @@ body.with-blackout {
 		}
 	}
 
+	.global-navigation {
+		position: static;
+	}
+
 	.WikiaSiteWrapper {
 		position: fixed;
 		width: 100%;
